:wrench: chore(apps-window): correctly align and expand flowbox

--- a/resources/styles/_apps-window.scss
+++ b/resources/styles/_apps-window.scss
@@ -15,6 +15,10 @@
     padding: 14px;
     border-radius: 18px;
 
+    & > text {
+      margin-left: 6px;
+    }
+
     &:focus-within {
       box-shadow: inset 0 0 0 2px colors.$bg-tertiary;
       background: rgba(colors.$bg-primary, .2);
